# OTUS_Lesson_8

./: CMakeLists.txt  lec_08_01_struct.cpp  lec_08_02_struct_stream.cpp  lec_08_03_struct_operators.cpp  lec_08_04_struct_nested.cpp  lec_08_05_struct_inheritance.cpp  lec_08_06_class.cpp
